# flashcards

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.qoder/quests/: chinese-flashcard-app-requirements.md
app/: main.py
app/api/routes/: csv.py  decks.py  frontend.py  statistics.py  study.py  users.py
app/auth/: auth_service.py  dependencies.py  router.py
app/core/: config.py  database.py
app/models/: database.py
app/schemas/: schemas.py
app/services/: card_service.py  csv_service.py  deck_service.py  learning_service.py  statistics_service.py  study_service.py  user_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  error.html  index.html  redirect.html  study.html
docs/: README.md  developer-guide.md  project-overview.md  technology-stack.md
docs/api/: endpoints-reference.md
docs/configuration/: config-environment.md
docs/models/: data-models-orm.md
docs/operations/: csv-import-export.md  deployment-operations.md  learning-algorithm.md  testing-strategy.md
docs/services/: business-logic-layer.md
tests/: test_main.py
